Menambahkan Index.js

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "prototype buat e ticket",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon index.js"
   },
   "author": "mas-fahmi",
   "license": "ISC",
